<resources>
    <string name="app_name">FreshChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">Please Login</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_signup">Sign Up</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
